umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_1675.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 84
bond_count: 98
sum_formula: C56H28
graph6: "~?@SHC?GC@???_@?@?G_aG?OO?CG?G?GGC????????G???_??@???@???G_??@????@????C???CG????c????C????@????AG??@?????G?@?????@????O?_G????O????????????C??????G??????G??????C??????P??????@C???????_??????@???????`?????G?@C???????????????@????????CO???????G??????_?_??????@?Q?????????O?????????O?????????_?????????G?????????C??????????O??????????_??????????_?????????@???????????_??????????C???????????_??????????@???????????C???????????A???????????A????????????O???????????C????????????O????????????O????????????O????????????C????????????A?????????????_????????????@?????????????C?????????????G????"
