umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_24-Crown-8.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 24
sum_formula: C16O8
graph6: WqGOOGA?O@?A?A?@??O?A??G??O??O??G??A???O??@???B
