umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_30-Crown-10.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 30
bond_count: 30
sum_formula: C20O10
graph6: "]qGOOGA?O@?A?A?@??O?A??G??O??O??G??A???O??@???A???A???@????O???@????C???@G"
