umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_3135_mark_undefined_stereo1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 16
bond_count: 16
sum_formula: C12N2O2
graph6: OhEGOCA?O?_A?OO???G?A
