umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_656.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 28
bond_count: 29
sum_formula: C28
graph6: "[kCg?C@?GC?@?@??_?G?`?@???G??G??C??@??GG??????@???@????_???G???P"
