umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_ChEBI_12211.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 80
bond_count: 210
sum_formula: B80
graph6: "~?@OhcGGE@?G?g@?@??c?G?@??CO?G??GG?C??@?_?G???_??@?O?@?C??_???G???@?A??C?A??G????G????C?@??@??C??G?????_????@??A??@???_??_?????G??@??@???A?????????G???G??G???@??C??????@????C??G????C??_??????@?????O?@?????A??_???????G?????G?@??????G?C????????G????????G??????G?C???????_@???????@?G???????@C_???Bo?B???E??]?????oN????????K?{???????@_@w???????F?@o??????AN_?????????E??{?????????@o??o??????????F_@_??????]??o????E??N????????B??Bo????????????@wE??????????Na????????@_?w?????????@w@_?????@w??o???????B_?@o???????????N??o??????????o?G?A@?"
